{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 372,
  "lineage": "f891588a-a316-675d-c99a-f05b7dd6b956",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:internet-gateway/igw-00795348fe075049b",
            "id": "igw-00795348fe075049b",
            "owner_id": "655436663840",
            "tags": {
              "Name": "igw-high-avail"
            },
            "tags_all": {
              "Name": "igw-high-avail"
            },
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:655436663840:loadbalancer/app/alb-high-avail/7bd8a3f50c6728c1",
            "arn_suffix": "app/alb-high-avail/7bd8a3f50c6728c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-high-avail-1210195907.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:655436663840:loadbalancer/app/alb-high-avail/7bd8a3f50c6728c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-high-avail",
            "preserve_host_header": false,
            "security_groups": [
              "sg-070779b4d5192ba80"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d903cf43704d96ad"
              },
              {
                "subnet_id": "subnet-0f309c6d8c84215d5"
              }
            ],
            "subnets": [
              "subnet-0d903cf43704d96ad",
              "subnet-0f309c6d8c84215d5"
            ],
            "vpc_id": "vpc-0af30717b0bc2e20f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.web-subnet1",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:655436663840:listener/app/alb-high-avail/7bd8a3f50c6728c1/466bbe33642aa052",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:655436663840:targetgroup/tg-1/7341f9f58229cd51",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:655436663840:listener/app/alb-high-avail/7bd8a3f50c6728c1/466bbe33642aa052",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:655436663840:loadbalancer/app/alb-high-avail/7bd8a3f50c6728c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target-group",
            "aws_security_group.alb_security_group",
            "aws_subnet.web-subnet1",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:655436663840:targetgroup/tg-1/7341f9f58229cd51",
            "arn_suffix": "targetgroup/tg-1/7341f9f58229cd51",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:655436663840:targetgroup/tg-1/7341f9f58229cd51",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:route-table/rtb-0d4284e51d7cd6c86",
            "id": "rtb-0d4284e51d7cd6c86",
            "owner_id": "655436663840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00795348fe075049b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-asscociation-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0329228f6e0fc1383",
            "route_table_id": "rtb-0d4284e51d7cd6c86",
            "subnet_id": "subnet-0d903cf43704d96ad"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-asscociation-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030302f4b49c4d57d",
            "route_table_id": "rtb-0d4284e51d7cd6c86",
            "subnet_id": "subnet-0f309c6d8c84215d5"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public-route-table",
            "aws_subnet.web-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:security-group/sg-070779b4d5192ba80",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070779b4d5192ba80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "655436663840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:security-group/sg-0cad06326322c23bd",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cad06326322c23bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-070779b4d5192ba80"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg-sg",
            "name_prefix": "",
            "owner_id": "655436663840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg-sg"
            },
            "tags_all": {
              "Name": "asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:subnet/subnet-0d903cf43704d96ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d903cf43704d96ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655436663840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-1"
            },
            "tags_all": {
              "Name": "web-subnet-1"
            },
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:subnet/subnet-0f309c6d8c84215d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f309c6d8c84215d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655436663840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-2"
            },
            "tags_all": {
              "Name": "web-subnet-2"
            },
            "vpc_id": "vpc-0af30717b0bc2e20f"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655436663840:vpc/vpc-0af30717b0bc2e20f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abcc641f51f8b9ea",
            "default_route_table_id": "rtb-0f86dd14a0afb0c3c",
            "default_security_group_id": "sg-014a55e0644fdd398",
            "dhcp_options_id": "dopt-00318a2e742027324",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af30717b0bc2e20f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f86dd14a0afb0c3c",
            "owner_id": "655436663840",
            "tags": {
              "Name": "vpc-high-avail"
            },
            "tags_all": {
              "Name": "vpc-high-avail"
            }
          }
        }
      ]
    }
  ]
}